Not for Checkin: test contributor workflow